[package]
name = "atecc608-sim"
version = "0.1.0"
edition = "2021"
description = "Software simulator for the Microchip ATECC608A secure element"
license = "GPL-3.0-or-later"

[dependencies]
p256 = { version = "0.13", features = ["ecdsa", "ecdh", "arithmetic"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
log = "0.4"

[[bin]]
name = "tcp_server"
path = "src/bin/tcp_server.rs"
