[package]
name = "tropic01-sim"
version = "0.1.0"
edition = "2021"
description = "Software simulator for the Tropic Square TROPIC01 secure element (libtropic-compatible TCP model)"
license = "GPL-3.0-or-later"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa", "arithmetic", "pem"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tcp_server"
path = "src/bin/tcp_server.rs"
