[package]
name = "pic32mz-sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
unicorn-engine.workspace = true
goblin.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
