[package]
name = "pic32mz-sim-runner-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pic32mz-sim"
path = "src/main.rs"

[dependencies]
pic32mz-sim-core.workspace = true
pic32mz-sim-peripherals.workspace = true
pic32mz-sim-chips.workspace = true
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
