[package]
name = "stm32-sim-chips"
description = "Per-chip memory map and peripheral wiring for the wolfSSL STM32 simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
stm32-sim-core.workspace = true
stm32-sim-peripherals.workspace = true
anyhow.workspace = true
log.workspace = true
