[package]
name = "stm32-sim-core"
description = "Core CPU emulation, MMIO bus and ELF loader for the wolfSSL STM32 simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
unicorn-engine.workspace = true
goblin.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
