[package]
name = "stm32-sim"
description = "Command-line runner for the wolfSSL STM32 simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "stm32-sim"
path = "src/main.rs"

[dependencies]
stm32-sim-core.workspace = true
stm32-sim-peripherals.workspace = true
stm32-sim-chips.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
